# stateless-validator

./: .gitignore  CODEBASE_ANALYSIS_REPORT.md  Cargo.toml  LOGGING.md  README.md  filesystem_coordination_analysis.md  main_rs_analysis.md  new_design.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: lint.yaml  release.yaml  unit.yaml
docs/: README.md  architecture-flowchart.md  architecture-sequence.md  viewing-diagrams.md
scripts/: validator-status.sh
test_data/: contracts.txt
test_data/blocks/: 1039.0x9d2b9ff9958387928969843e7c96b0442cdfef65cc140f7e92756b96ce99a1e3.json  1040.0xc97f9d968dac140b5a7bd949ee448a02e0756bd144e1a016876941b79877843c.json  1041.0x8ea40f71f2df5530a81ab9dceb2f3eb1ff51f344caad91c3fc3000f6be444309.json  1042.0xcc539e5e390b201948dd021b3f8818d40d815011874937f5ca860ae13762ac9c.json  1043.0x222dc5372b69d18d757a39196609c1f3aac4b4941b256af52694783947d2bafb.json  1044.0x6b20f732193eab9b6cefc093a7c7647dfaf92cc82693b43b0cd1e90a62201589.json  1045.0x8a0c4766f7be3d8cc1dc2478e1f338587df12751ba1cbdf542edef8b7c163d48.json  1046.0xbb2dbcded58c25169163260205b7349cd5a14cc360f435acfa9396ab571d9b2f.json  1047.0x64c0e8bbf11557ae792155c7fd19f572a6e8b3dea172df2ffbf0a005faa26b87.json  1048.0x94d521199198da7afcd78ae31d8acf83b192484990d9709b382db44c3baa9e76.json  1049.0x435936abdaee92190321e3b01f2c79660c27154e95d6d69e0dc88fefb7e6adc3.json  1050.0x36a4b311a1aa7a7741716b5621247021b94587e765608a0d6fecfa6afc7be534.json  1051.0xd7ae9f64b5ae8195de7368db03b0e84549525b30a98ce5170918a104f00de804.json  1052.0x7ebf6138011c965854a8b679d3260b19f4a931f509b6c023b22b435f237b272d.json  1053.0xdec1b61a04607accb352b1ec15148302ba48f70fe56f1df80231f48f00fd3f02.json  1054.0x8455c99040203027f0d3e4835ae8693678d2cb50411addde35cbc68b72cefa49.json  1055.0x33a68c89ed6e82366a09507ae151288101c1b3d652d29b117ecc8f880ea1169f.json  1056.0x7cada7ea54fe4fdce313ba4b257ebf573f59c56f78e3fb4dd35604ce13040297.json  1057.0x6e529fe6560aa827229ed6b7cd6f58bc61fb3e955a84c386c32e70ca7aa17f8e.json  1058.0xad1557f9a25e0727b79bea2194bd97c73f7f69698e99ab644b3f87e2ecbcb1d4.json  1059.0xa9e3e32cd601191a63397039da09052c3da234d01751287598d93fa1e69835e9.json  1060.0xe1e28d3bcd509a7e1b81396b77fd89758fc9690ba37d413b33e12169fbbcc586.json  1139.0xc8811be66f0abfb0777325640d7f62624e947c152f674691d7aa008c5659476b.json  1140.0x03147c17abfc5ba3727a17dd91919bd187b20eb3655b4bed9b5ee260d9a6b2f4.json  1141.0x5c951157f6d1bfe3483fc78ac1fcf4587d75882fe2cb789e401f516e9d1d479b.json  1142.0x889dfe14c888738b7f53cf29849c1fde7800448c4004f0b39734f0ed5eacaa75.json  1143.0xba1ac7b3ced65f66e81912c942b559da91cb6719ea4994b4f621e3004236cef2.json  1144.0x63474aa7db0b558cf4ad83c82b5acb7bdc2bba1e733e5d5618770e7edb2f9f75.json  1145.0xe938be2b22bf9459cac8705758ccded1b8fd47acdb205607352abcc904363e54.json  1146.0x9dfc2fcf217f73694eb3dee32002b5f2042516ea7eae3cc4e1d39cb1ce5b264f.json  1147.0xed90eb26ce4bd2bda2a2665fd5257ab17a36e40f846a334b5715b45ebbcad073.json  1148.0x97127d4faa89400b3ff6ab6ae12418daf4be7537b9fabc16de5c683278b9e32d.json  1149.0xb8f059b394fbc57dd5cef04ec25bca1506add61f067a185bc8b8bd5908d9baed.json  1150.0xd5de650f80c056e915f119c5787557aa296e5f4e012abb9248d1ea98cc4d14fb.json  1151.0x0045cee1dc5327c6e5941b3efd77ea2a3e823b8aef0828e478fd5f6dfe685161.json  1152.0x138dd07f19a09f410cc98f9109e7b1c62ac0a6629419fc971d567c138160109a.json  1153.0xa8b3405fe5ee53bff83fd8a03004e4a1405a42fe31d59ed8c4b49d26d8dff0ec.json  1154.0xaa18ff6e92c7e52b017ff402354965844e3dad503601e9395617baf685de94f9.json  1155.0x0d79dc1cf5b6af3010e81bae6c8ff031300352f09f0cafe21a6d018f39a019fc.json  1156.0xf0f7e8bf97491833a01da9a7e8278c63837d54676eb25a2f93a26f13cfe5a1fd.json  (+252 more)
test_data/data_dir/3470/: block.json
test_data/witness/: 3470.0x7fb4b7d39a83685b4efb5daea29aa83c6b420fc4e17396e1c1e1f0fead05beba.w  3472.0x93b3ab7145e21caf8a6b55e650121eeaff5ca1d345cdc7d054d655b91cd09700.w  3473.0xd031d2b4b85b86bc74c7b718d1c4b9b2f337d510f116eba544cca0479f74faac.w  3476.0xbaa4562f54c43d7da60b7986f69b84661eeb586f535a760636125d7f1bde1328.w  3478.0xd36831caad26ce647bcc25eb09c674570835859bd8d0fd369b791d7da8b7cd7b.w  3480.0xabfc99eddc61ea812c3a753bd7533484044e3110246526d1513055dbc2b7a554.w  3481.0x32dc89c6ae1ef191ec96e3987da5e13a5072d5bcf00f6b8b72c4770c2f10b865.w  3482.0x5fa441c22ed60cd88de238c3bdfd0b9c0fd1ddd0babecd3e697141b062e3dff3.w  3483.0x110600b99496bc91b51f6d055101b8bf6615acf585a74c30359580949965abd2.w  3484.0x400a18d2516a6137a021dfb816c4bbbdcce2f223e9aa5e9c6f0f80962512b599.w  3488.0xcc90765d9c86d764b371e1f7a21db6cc07420d166100f5c5af558e640ac53a55.w  7340.0xd67242420a7a93433fc2b35940b6619440a53b67a7378cfbffee895844d47833.w  7341.0xd87a76c3600f1bd8cf522e86541256e61294868d544e02887409c38ce4a6cec8.w  7342.0xbf41fc9198e3222715f0026fa40c370cad0ab1ed6f836431af3a511f4ab77bb7.w  7343.0x5cedb04dae96f62df609c0b984caf0a080c853b0c292ab1927d0e420452c6bf1.w  7344.0xbf6cbf914ce19aac8e880f3668042c5f1e04baa6d190783f22248805132209ee.w  7345.0x4a3197e870a724972ff8cff2cfd81cc5a8784a2140483874139c8e4b40e65068.w  7346.0x225b49af9f8c9cd982cba82e2d40f2f42d1170f9c3d07312ce5747fe632abd85.w  7347.0x8d4f9e3d6bdbf4b4d897c32d20149ea1aedda21aa411fc3f0d1b37f90c99d488.w  7348.0x3c4f87a703d84b1015ed9cf9a48ac0006998c2b44692bdc23315c89e11303551.w  7349.0x0e7d96b63e4c8df8e5318c379c752a133081011e3329e39e03c23e6d4c500651.w  7350.0x5fdcae71b1952a55d24c4d5c21b77e59742bc8a2074b19efb0b8f8d358b800e3.w  chain.status  (+11 more)
validate/: Cargo.toml
validate/src/: format.rs  generate.rs  lib.rs  validator.rs
validate/src/validator/: evm.rs  file.rs  rpc.rs
validate/src/validator/evm/: receipt.rs  receipts.rs  signed.rs
validator-core/: Cargo.toml
validator-core/src/: chain.rs  chain_spec.rs  chain_sync.rs  database.rs  encoding.rs  executor.rs  hardfork.rs  lib.rs  manager.rs  mpt_witness.rs  provider.rs  rpc_client.rs  tracing_executor.rs  validator_db.rs  validator_db2.rs  withdrawals.rs  witness.rs
validator-core/src/client/: mod.rs  rpc.rs
validator-core/src/evm/: data_types.rs  executor.rs  mod.rs  receipt.rs  receipts.rs
validator-core/src/storage/: file.rs  mod.rs
validator-core/src/validator_db/: in_memory_db.rs  writer.rs
(+574 files in other folders)
