[workspace]
members = ["bin/stateless-validator", "validator-core"]
resolver = "2"

[workspace.dependencies]
# alloy
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-evm = { version = "0.15.0", default-features = false }
alloy-hardforks = { version = "0.2.7" }
alloy-network-primitives = { version = "1.0.23", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-provider = { version = "1.0.23", features = [
    "reqwest",
], default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }

# op
alloy-op-evm = { version = "0.15.0", default-features = false }
alloy-op-hardforks = { version = "0.2.7" }
op-alloy-network = { version = "0.18.12", default-features = false }
op-alloy-rpc-types = { version = "0.18.12", default-features = false }
op-revm = { version = "8.1.0", default-features = false }

revm = { version = "27.1.0", default-features = false }

mega-evm = { git = "https://github.com/megaeth-labs/mega-evm.git", rev = "1f8555f441a7939f3c0245a941eba6fdde3ba204" }
salt = { git = "https://github.com/megaeth-labs/salt.git", rev = "f175203391f93331d92036d831cdbe18973bee2d" }

bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
futures = "0.3"
num_cpus = "1.17"
redb = "3.0.1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.20", features = ["fmt"] }

[profile.bench]
debug = true
opt-level = 3
debug-assertions = true
incremental = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
incremental = true


[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true
