[workspace]
members = ["bin/stateless-validator", "validator-core"]
resolver = "2"

[workspace.dependencies]
# alloy
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-evm = { version = "0.15.0", default-features = false }
alloy-genesis = { version = "1.0.23", default-features = false }
alloy-hardforks = { version = "0.2.7" }
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-provider = { version = "1.0.23", features = [
    "reqwest",
], default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-serde = { version = "1.0.23", default-features = false }
alloy-trie = { version = "0.9.0", default-features = false }

# op
alloy-op-evm = { version = "0.15.0", default-features = false }
alloy-op-hardforks = { version = "0.2.7" }
op-alloy-network = { version = "0.18.12", default-features = false }
op-alloy-rpc-types = { version = "0.18.12", default-features = false }

# revm
revm = { version = "27.1.0", default-features = false }

# megaeth 
mega-evm = { git = "https://github.com/megaeth-labs/mega-evm.git", rev = "v1.2.5" }
salt = { git = "https://github.com/megaeth-labs/salt.git", rev = "v1.0.0" }

# reth
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-trie-sparse = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

# misc
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dyn-clone = "1.0"
eyre = "0.6"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
num_cpus = "1.17"
redb = "3.0.1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.46", features = ["rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.20", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = false

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true
