[package]
name = "validate"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-evm.workspace = true
alloy-hardforks.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-network-primitives.workspace = true

op-alloy-network.workspace = true
alloy-op-hardforks.workspace = true
alloy-op-evm.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true

mega-evm.workspace = true
salt.workspace = true
revm.workspace = true

blake3.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true

eyre.workspace = true
futures.workspace = true
fs2.workspace = true
rand.workspace = true
tokio.workspace = true
jsonrpsee-types.workspace = true

[dev-dependencies]
tempfile = "3.8"
