[package]
name = "validator-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-hardforks.workspace = true
alloy-network-primitives.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true

alloy-op-evm.workspace = true
alloy-op-hardforks.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true

revm.workspace = true

mega-evm.workspace = true
salt.workspace = true

bincode.workspace = true
blake3.workspace = true
eyre.workspace = true
fs2.workspace = true
jsonrpsee-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.8"
