[package]
name = "validator-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true
alloy-serde.workspace = true
alloy-network-primitives.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

alloy-op-evm.workspace = true
alloy-op-hardforks.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true

revm.workspace = true

mega-evm.workspace = true
salt.workspace = true

reth-ethereum-forks = { workspace = true }
reth-optimism-chainspec = { workspace = true }

bincode.workspace = true
dyn-clone.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
