[package]
name = "validator-core"
version = "2.0.5"
edition = "2024"

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-trie.workspace = true

# op
alloy-op-evm.workspace = true
alloy-op-hardforks.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true

# revm
revm.workspace = true

# megaeth 
mega-evm.workspace = true
salt.workspace = true

# reth
reth-ethereum-forks.workspace = true
reth-optimism-chainspec.workspace = true
reth-trie.workspace = true
reth-trie-common.workspace = true
reth-trie-sparse.workspace = true

# misc
bincode.workspace = true
eyre.workspace = true
dyn-clone.workspace = true
rayon.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
test-bucket-resize = ["salt/test-bucket-resize"]